# comprehensive_rust_exercise

./: Cargo.toml
src/: main.rs
src/day1/: library.rs  morning.rs
src/day2/: health.rs  luhn.rs  polygon.rs  prefix.rs
src/day3/: gui.rs  safe_ffi.rs
src/day4/: arc_and_mutex.rs  eat_think.rs  url_checker.rs
