[package]
name = "exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
libc = "0.2.139"
reqwest = { version = "0.11.13", features = ["blocking", "rustls-tls"] }
scraper = "0.14.0"
thiserror = "1.0.38"
